--- a/src/templates/items-list/items-style/emerge/style.scss
+++ b/src/templates/items-list/items-style/emerge/style.scss
@@ -48,7 +48,8 @@
         will-change: transform, opacity;
     }
 
-    .vp-portfolio__item:hover {
+    .vp-portfolio__item:hover,
+    .vp-portfolio__item:focus {
         .vp-portfolio__item-img img {
             transform: scale(1.1);
         }
@@ -72,7 +73,8 @@
             color: inherit;
             text-decoration: none;
 
-            &:hover {
+            &:hover,
+            &:focus {
                 opacity: .8;
             }
         }
