--- a/src/templates/items-list/items-style/style.scss
+++ b/src/templates/items-list/items-style/style.scss
@@ -15,7 +15,8 @@
         transition: transform 2s cubic-bezier(.08, .43, .24, 1), opacity .3s;
         will-change: transform, opacity;
     }
-    .vp-portfolio__item:hover {
+    .vp-portfolio__item:hover,
+    .vp-portfolio__item:focus {
         .vp-portfolio__item-img img {
             transform: scale(1.1);
         }
@@ -44,7 +45,8 @@
             color: inherit;
             text-decoration: none;
 
-            &:hover {
+            &:hover,
+            &:focus {
                 color: #007acc;
             }
         }
@@ -75,7 +77,8 @@
                 transition: .2s background-color;
                 will-change: background-color;
 
-                &:hover {
+                &:hover,
+                &:focus {
                     background-color: #545454;
                 }
             }
