--- a/src/templates/items-list/sort/dropdown/style.scss
+++ b/src/templates/items-list/sort/dropdown/style.scss
@@ -31,7 +31,8 @@
         transition: .2s border-color, .2s background-color, .2s color;
         will-change: border-color, background-color, color;
 
-        &:hover {
+        &:hover,
+        &:focus {
             border: 1px solid #bfbfbf;
         }
     }
