--- a/src/templates/items-list/items-style/fade/style.scss
+++ b/src/templates/items-list/items-style/fade/style.scss
@@ -3,6 +3,7 @@
  */
 .vp-portfolio__items-style-fade {
     .vp-portfolio__item a {
+        text-decoration: none;
         outline: none;
         box-shadow: none;
     }
@@ -17,7 +18,7 @@
         text-decoration: none;
         background-color: rgba(0, 0, 0, .85);
         opacity: 0;
-        transition: opacity 1s cubic-bezier(.07, .72, .24, 1);
+        transition: opacity .3s ease;
         will-change: opacity;
 
         // Fix FireFox image blinking
@@ -41,61 +42,70 @@
         justify-content: center;
         width: 100%;
         height: 100%;
-        padding: 20px;
+        padding: 2em;
         color: inherit;
         text-align: center;
-        transition: transform 1s cubic-bezier(.07, .72, .24, 1), opacity 1s cubic-bezier(.07, .72, .24, 1);
-        transform: scale(.8);
+        transition: transform .3s ease, opacity .3s ease;
+        transform: scale(.95);
         will-change: transform, opacity;
 
         > * {
             max-width: 100%;
+            margin-bottom: 1.5em;
         }
 
-        > * + * {
-            margin-top: 4px;
+        > :last-child {
+            margin-bottom: 0;
         }
-    }
-    .vp-portfolio__item-meta-title {
-        margin-bottom: 0;
-        font-size: 1.3em;
-        color: inherit;
-    }
-    .vp-portfolio__item-meta-date {
-        font-size: .85em;
     }
     .vp-portfolio__item-meta-icon {
         font-size: 2em;
-
-        + * {
-            margin-top: 15px;
-        }
     }
     .vp-portfolio__item-meta-categories {
-        position: absolute;
-        display: flex;
+        display: inline-flex;
         flex-wrap: wrap;
-        bottom: 0;
-        left: 0;
-        padding: 0;
-        margin: 0 -5px;
+        margin-right: 0;
+        margin-left: 0;
+        font-size: .9em;
+        font-weight: 500;
+        text-transform: uppercase;
         list-style-type: none;
+        opacity: .8;
 
         .vp-portfolio__item-meta-category {
-            display: block;
-            padding: 4px 15px;
-            margin: 0 5px;
-            color: #fff;
-            background-color: #3c3c3c;
+            display: flex;
+            padding: 0;
+            margin: 0;
+            margin-right: 5px;
+
+            &::after {
+                content: ", ";
+            }
+            &:last-of-type::after {
+                content: none;
+            }
+
+            a {
+                text-decoration: none;
+            }
         }
     }
+    .vp-portfolio__item-meta-date {
+        font-weight: 400;
+        opacity: .8;
+    }
+    .vp-portfolio__item-meta-title {
+        font-size: 1.3em;
+        color: inherit;
+    }
     .vp-portfolio__item-meta-excerpt {
+        line-height: 1.5;
         opacity: .8;
     }
 
     // Transitions
     .vp-portfolio__item-img img {
-        transition: transform 2s cubic-bezier(.08, .43, .24, 1), opacity .3s;
+        transition: transform .3s ease, opacity .3s ease;
         will-change: transform, opacity;
 
         // Fix FireFox image blinking
@@ -111,7 +121,7 @@
             transform: scale(1);
         }
         .vp-portfolio__item-img img {
-            transform: scale(1.1);
+            transform: scale(1.05);
         }
     }
 
