--- a/src/templates/items-list/items-style/fly/style.scss
+++ b/src/templates/items-list/items-style/fly/style.scss
@@ -3,6 +3,7 @@
  */
 .vp-portfolio__items-style-fly {
     .vp-portfolio__item a {
+        text-decoration: none;
         outline: none;
         box-shadow: none;
     }
@@ -35,47 +36,60 @@
         justify-content: center;
         width: 100%;
         height: 100%;
-        padding: 20px;
+        padding: 2em;
         color: inherit;
 
-        > * + * {
-            margin-top: 4px;
+        > * {
+            max-width: 100%;
+            margin-bottom: 1.5em;
         }
-    }
-    .vp-portfolio__item-meta-title {
-        margin-bottom: 0;
-        font-size: 1.3em;
-        color: inherit;
-    }
-    .vp-portfolio__item-meta-date {
-        font-size: .85em;
+
+        > :last-child {
+            margin-bottom: 0;
+        }
     }
     .vp-portfolio__item-meta-icon {
         font-size: 2em;
-
-        + * {
-            margin-top: 15px;
-        }
     }
     .vp-portfolio__item-meta-categories {
-        position: absolute;
-        display: flex;
+        display: inline-flex;
         flex-wrap: wrap;
-        bottom: 0;
-        left: 0;
-        padding: 15px 10px;
-        margin: 0;
+        margin-right: 0;
+        margin-left: 0;
+        font-size: .9em;
+        font-weight: 500;
+        text-transform: uppercase;
         list-style-type: none;
+        opacity: .8;
 
         .vp-portfolio__item-meta-category {
-            display: block;
-            padding: 4px 15px;
-            margin: 0 5px;
-            color: #fff;
-            background-color: #3c3c3c;
+            display: flex;
+            padding: 0;
+            margin: 0;
+            margin-right: 5px;
+
+            &::after {
+                content: ", ";
+            }
+            &:last-of-type::after {
+                content: none;
+            }
+
+            a {
+                text-decoration: none;
+            }
         }
     }
+    .vp-portfolio__item-meta-date {
+        font-weight: 400;
+        opacity: .8;
+    }
+    .vp-portfolio__item-meta-title {
+        font-size: 1.3em;
+        color: inherit;
+    }
     .vp-portfolio__item-meta-excerpt {
+        line-height: 1.5;
         opacity: .8;
     }
 
