--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -231,21 +231,30 @@ $grid_sm: 600px !default;
     th.column-portfolio_post_thumbs {
         width: 70px;
     }
+    th.column-vp_lists_post_icon {
+        width: 40px;
+    }
     th.column-vp_lists_post_shortcode {
         width: 250px;
     }
 
     @media screen and (max-width: 782px) {
         /* Hide column on mobile device */
-        th.column-portfolio_post_thumbs {
+        th.column-portfolio_post_thumbs,
+        th.column-vp_lists_post_icon {
             display: none;
         }
         tr:not(.inline-edit-row):not(.no-items) {
-            td.column-portfolio_post_thumbs {
+            td.column-portfolio_post_thumbs,
+            td.column-vp_lists_post_icon {
                 float: left;
                 // stylelint-disable-next-line declaration-no-important
                 width: 70px !important;
                 min-width: 70px;
+            }
+            td.column-vp_lists_post_icon {
+                // stylelint-disable-next-line declaration-no-important
+                width: 40px !important;
             }
             td.column-portfolio_post_thumbs::before {
                 content: none;
@@ -261,6 +270,27 @@ $grid_sm: 600px !default;
 /**
  * Portfolio List page
  */
+.vp-portfolio-list__icon {
+    position: relative;
+    display: block;
+    max-width: 70px;
+    padding-top: 100%;
+    overflow: hidden;
+    color: inherit;
+    background-color: #f1f1f1;
+    border: 1px solid #e8e8e8;
+    border-radius: 3px;
+
+    svg {
+        position: absolute;
+        display: block;
+        top: 15%;
+        left: 15%;
+        width: 70%;
+        height: 70%;
+        object-fit: cover;
+    }
+}
 .vp-portfolio-list {
     .vp-portfolio-list__icon span {
         display: block;
