--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -277,9 +277,16 @@ $grid_sm: 600px !default;
     padding-top: 100%;
     overflow: hidden;
     color: inherit;
+    color: #868686;
     background-color: #f1f1f1;
     border: 1px solid #e8e8e8;
     border-radius: 3px;
+
+    &:hover,
+    &:active,
+    &:focus {
+        color: #5f5f5f;
+    }
 
     svg {
         position: absolute;
