improved overall styles

--- a/src/assets/css/theme-twentyseventeen.scss
+++ b/src/assets/css/theme-twentyseventeen.scss
@@ -7,6 +7,13 @@
     }
 }
 
+// Fix headings padding and font.
+.entry-content .vp-portfolio__item-meta-title {
+    padding-top: 0;
+    font-family: "Libre Franklin", "Helvetica Neue", helvetica, arial, sans-serif;
+    font-weight: 600;
+}
+
 // Fix for figcaption in block.
 .wp-block-nk-visual-portfolio[class^="wp-block-"]:not(.wp-block-gallery) figcaption {
     margin-bottom: 0;
