--- a/src/templates/notices/style.scss
+++ b/src/templates/notices/style.scss
@@ -1,10 +1,9 @@
 /**
- * Default filter style
+ * Notices style
  */
 .vp-notice {
-    padding: 10px 20px;
-    color: #005b7f;
-    background-color: #f6fbff;
-    border: 1px solid #7da3b2;
-    border-radius: 4px;
+    padding: 1em 1.3em;
+    color: #2540cc;
+    background-color: #f7f7f7;
+    border-left: 2px solid #2540cc;
 }
