--- a/src/assets/css/theme-twentynineteen.scss
+++ b/src/assets/css/theme-twentynineteen.scss
@@ -3,7 +3,22 @@
     text-decoration: none;
 }
 
+// Fix headings margin.
+.entry-content .vp-portfolio__item-meta-title {
+    margin-top: 0;
+}
+
 // Fix headings decorators.
 .vp-portfolio__item-meta-title::before {
     content: none;
+}
+
+// Fix font family.
+.vp-filter__item,
+.vp-sort__item,
+.vp-sort select,
+.vp-portfolio__item-meta-category,
+.vp-pagination__item {
+    // stylelint-disable-next-line
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 }
