--- a/src/templates/items-list/pagination/style.scss
+++ b/src/templates/items-list/pagination/style.scss
@@ -6,7 +6,7 @@
     flex-wrap: wrap;
     justify-content: center;
     padding: 0;
-    margin: -3px;
+    margin: -6px;
     margin-top: 17px;
     list-style-type: none;
 
@@ -26,33 +26,37 @@
     .vp-pagination__item {
         flex: 0 0 auto;
         padding: 0;
-        margin: 3px;
+        margin: 6px;
         text-align: center;
         list-style-type: none;
 
         > * {
             display: block;
             min-width: 40px;
-            padding: 8px 16px;
+            padding: .9em 1.6em;
+            font-size: .7em;
+            font-weight: 600;
             line-height: 1.4;
-            color: inherit;
+            color: #787878;
             text-decoration: none;
-            background-color: #fff;
-            border: 1px solid #eaeaea;
-            transition: .2s border-color, .2s background-color, .2s color;
-            will-change: border-color, background-color, color;
+            text-transform: uppercase;
+            letter-spacing: .015em;
+            background-color: #f7f7f7;
+            border-radius: 5px;
+            transition: .2s background-color ease, .2s color ease;
+            will-change: background-color, color;
         }
 
         &:not(.vp-pagination__item-active) > a:hover,
         &:not(.vp-pagination__item-active) > a:focus {
-            border: 1px solid #bfbfbf;
+            color: #4b4b4b;
+            background-color: #e8e8e8;
         }
 
         &.vp-pagination__item-active > * {
             color: #fff;
             cursor: default;
-            background-color: #6c7781;
-            border: 1px solid #6c7781;
+            background-color: #2540cc;
         }
     }
 
@@ -81,6 +85,59 @@
     }
     &.vp-pagination__no-more .vp-pagination__load-more {
         opacity: .5;
+    }
+}
+
+/* Paged */
+[data-vp-pagination-type="paged"] {
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+
+    .vp-pagination__item {
+        background: none;
+
+        > * {
+            min-width: 30px;
+            padding: .9em;
+            margin: 0;
+            color: inherit;
+            background: none;
+        }
+
+        &:not(.vp-pagination__item-active) > a:hover,
+        &:not(.vp-pagination__item-active) > a:focus {
+            color: #2540cc;
+            background: none;
+        }
+
+        &.vp-pagination__item-active {
+            position: relative;
+
+            // We use this image for the hack to make active item circle instead of square.
+            // <img> added in script /assets/js/pagination-paged.js
+            > img {
+                width: auto;
+                max-width: none;
+                height: 100%;
+                padding: 0;
+                text-align: left;
+                opacity: 0;
+
+                + span {
+                    position: absolute;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    top: 0;
+                    width: 100%;
+                    min-width: 0;
+                    height: 100%;
+                    padding: 0;
+                    border-radius: 50%;
+                }
+            }
+        }
     }
 }
 
