--- a/src/templates/items-list/sort/dropdown/style.scss
+++ b/src/templates/items-list/sort/dropdown/style.scss
@@ -6,7 +6,7 @@
     flex-wrap: wrap;
     justify-content: center;
     padding: 0;
-    margin: -3px;
+    margin: -6px;
     margin-bottom: 17px;
     list-style-type: none;
 
@@ -21,19 +21,25 @@
     select {
         display: block;
         min-width: 40px;
-        padding: 8px 16px;
-        margin: 3px;
+        padding: .9em 1.6em;
+        margin: 6px;
+        font-size: .7em;
+        font-weight: 600;
         line-height: 1.4;
-        color: inherit;
+        color: #787878;
         text-decoration: none;
-        background-color: #fff;
-        border: 1px solid #eaeaea;
-        transition: .2s border-color, .2s background-color, .2s color;
-        will-change: border-color, background-color, color;
+        text-transform: uppercase;
+        letter-spacing: .015em;
+        background-color: #f7f7f7;
+        border: none;
+        border-radius: 5px;
+        transition: .2s background-color ease, .2s color ease;
+        will-change: background-color, color;
 
         &:hover,
         &:focus {
-            border: 1px solid #bfbfbf;
+            color: #4b4b4b;
+            background-color: #e8e8e8;
         }
     }
 }
