--- a/src/gutenberg/components/controls-render/style.scss
+++ b/src/gutenberg/components/controls-render/style.scss
@@ -1,3 +1,8 @@
+.vpf-control-wrap .components-base-control__help {
+    margin-top: 0;
+    margin-bottom: 0;
+    opacity: .5;
+}
 
 .vpf-control-wrap-toggle,
 .vpf-control-wrap-checkbox {
