fixed words-break for controls descriptions

--- a/src/gutenberg/components/controls-render/style.scss
+++ b/src/gutenberg/components/controls-render/style.scss
@@ -1,6 +1,7 @@
 .vpf-control-wrap .components-base-control__help {
     margin-top: 0;
     margin-bottom: 0;
+    word-break: break-word;
     opacity: .5;
 }
 
